<resources>
    <string name="app_name">Find My Drunk Friends</string>
    <string name="title_activity_main">FindMyDrunkFriends</string>

    <string name="local1B">provided by The Global App Company</string>
    <string name="local1C">plus</string>
    <string name="local2">Find My Drunk Friends v1.0 is provided by The Global App Company, Inc.</string>
    <string name="local3">register</string>
    <string name="local4">refresh</string>
    <string name="local5">share</string>
    <string name="local6">get \'Find My Drunk Friends\'</string>
    <string name="local81">Nudity and offensive photos are not permitted. Policy violation will result in account termination.</string>
    <string name="local83">Use your camera or choose images from your devices album, then tap upload. Photo should be a clear photo of yourself.</string>
    <string name="local84">Remember to tap upload after you have selected your photo.</string>
    <string name="local142">Your photo has been uploaded.</string>
    <string name="local314">enter your friends user id and name</string>
    <string name="local164">info</string>
    <string name="local267">Please select a valid picture prior to upload.</string>
    <string name="local320">Every user enters a unique user id whenever they install the app. Your user id is always shown in the top center area of the map. If you and a friend agree to follow one another, then you both enter each others name in the invite field, then you will be able to see each others location on your maps. Your location is represented by the moving blue dot on the map. Your friends location is marked with a red pin. To update your friends location you will need to occasionally tap the refresh link on your map. This refresh also provides your friend with your updated location. You can also tap on the red pins to see their name. The distance apart and time last updated is also displayed.</string>
    <string name="local135">Note</string>
    <string name="local136">continue</string>
    <string name="local315">content must be a valid name, 3-20 characters (no spaces and no special characters)</string>
    <string name="local316">content must be a valid name, 3-20 characters (no spaces and no special characters), multiple names must be seperated by a space</string>
    <string name="local207">To tell your friends about this app, tap on either the email or text icons:</string>
    <string name="local208A">Hey I just installed the new app from iTunes "Find My Drunk Friends". My user id in the app is %1$s After you install it, text me your user id.Here is the Play Store link: https://play.google.com/store/apps/details?id=%2$s</string>
    <string name="local321">Find My Drunk Friends allows you to see your location and your friends location interactively on a map. Simply ask your friend/s to also install the app, then exchange user id\'s with one another and you can then easily find one another. </string>
    <string name="local303">App problem or suggestion, tap here:</string>
    <string name="local307">miles</string>
    <string name="local308">km</string>
    <string name="local323">To post an app review in playStore tap here:</string>
    <string name="local324">app review</string>
    <string name="local325">Now enter a unique user id to identify yourself. \n You can not change it once you tap create. 3\n to 20 characters in length with no spaces or \nspecial characters:</string>
    <string name="local326"> type here</string>
    <string name="local327">that name is already taken, please try another</string>
    <string name="local328">To connect with a friend, enter their app user id\n followed by their name. Example: jsmith1 john smith</string>
    <string name="local329">hoobee</string>
    <string name="local330">get hoobee</string>
    <string name="local331">The hoobee app is ideal for making new friends, dating, networking or just chatting with new and interesting people nearby. Its primary goal is to make it much easier to meet new people. An important distinction of hoobee from other social apps is that hoobee does not request email addresses, phone numbers, Facebook access, etc. Download the app and start making new friends or meet that special someone today!</string>
    <string name="local332">what is hoobee?</string>
    <string name="local333">upgrade</string>
    <string name="local334">to follow an unlimited number of friends you will need to select the upgrade link below and install the PLUS version of this app. This base version is limited to following only two friends.</string>
    <string name="local335">friends</string>
    <string name="local336">format incorrect, enter friends user id then one space followed by their name</string>
    <string name="local337">has now been added to your friends database, add another friend or press back</string>
    <string name="local338">confirm</string>
    <string name="local339">no</string>
    <string name="local340">yes</string>
    <string name="local341">are you sure that you want to delete this entry?</string>
    <string name="local342">currently not sharing</string>
    <string name="local343">Tap the add icon to add a new friend. First you enter their user id that they created when they installed the app on their device. Follow their user id with one space and the name you best know them to be called. For example, if John Smith used a user id of jsmith1, you would enter: jsmith john smith. Once added, you can then control when they can see your location by tapping on the circle to the left of their entry. When a check mark appears in the circle they then can see your location. Remove the check mark and they will no longer be able to see your locaion. If and when your friend does the same for you on their device you will then be able to see their location.</string>
    <string name="local344">Not able to add this friend to your database. You will need to upgrade to the plus version of the app. Tap the share link on the map page then the upgrade link. This version of the app only contains support for 2 friends, the plus version supports an unlimited number of friends in your database.</string>
    <string name="local345">create</string>
    <string name="local346">you will be asked...</string>
    <string name="local347">begin</string>
    <string name="local348">This app needs to use location services on your device. Tap the begin link above until a popup appears for location services.</string>
    <string name="local349">Your user id is registered and displayed above and to the right. You can use the share link to ask a friend to install the app on their phone. You can then follow your friend and/or your friend can follow you. You will use the friends link to maintain your friends within the app.</string>
    <string name="local350">demo</string>
    <string name="local351">real</string>
    <string name="local352">while in demo mode you can not delete friends from your database</string>
    <string name="local353">when checked your friend will be able to see your location on their map, when not checked your friend will NOT be able to see your location. while in demo mode you can not change this.</string>
    <string name="local354">while in demo mode you can not add new friends to your database</string>
    <string name="local355">tap refresh after adding new friends to your database</string>
    <string name="local356">this app allows you to locate your friends and/or permits you to allow your friends to locate you. every user must have a unique user id, the app will request your user id at this time.</string>
    <string name="local357">auto-on</string>
    <string name="local358">auto-off</string>
    <string name="local359A">when auto-on is selected your map is updated automatically once every 5 minutes, when auto-off is selected your map is only updated whenever you tap the refresh link</string>
    <string name="local359B">when auto-on is selected your map is updated automatically once every minute, when auto-off is selected your map is only updated whenever you tap the refresh link</string>
    <string name="local360">photo</string>
    <string name="local361">sat</string>
    <string name="local362">map</string>
    <string name="local363">Upload a photo of yourself. When you share your location with friends, they will see this image. To do this simply take or choose a photo from your album.</string>
    <string name="local365">Your photo has been uploaded.</string>
    <string name="local366">Please select a valid picture prior to upload.</string>
    <string name="local364">Current photo displayed on the left, newly uploaded photo shown on the right.</string>
    <string name="local367">Please remember to upload a photo of yourself using the photo page.</string>
    <string name="local368">get upgrade</string>
    <string name="local369">why upgrade?</string>
    <string name="local370">The upgraded "plus" version of "Find my Drunk Friends" allows you to add an unlimited number of friends to your database. The non-plus version only allows for 2 friends in your database. Additionally, the "plus" version of the app will automatically update user locations every 2 minutes. The non-plus version automatically updates user locations every 10 minutes.</string>
    <string name="local371">You are now in demo mode. When you are ready, change to real mode and invite some friends.</string>
    <string name="local372">To add friends to your database you need to first select real mode on the map page.</string>
    <string name="local373">The network is not responding, please try again with a better network signal.</string>
    <string name="local374">The location of all users is updated automatically every 10 minutes in the standard app version. In the plus version of the app, user locations are updated every 2 minutes.</string>
    <string name="local375">You have not yet added any friends to your database. Tap the share link to invite your friends, then tap the friends link to add your friends.</string>
    <string name="local376">Drink Tally</string>
    <string name="local377">Need to keep track of how many drinks you\'ve had? Tap beer glass to add 1, to reset the counter to zero, enter demo mode.</string>
    <string name="local379">FMDF feedback</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS not enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="title_activity_friends">friends</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_photo">Photo</string>

</resources>
