<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.picamerica.findmydrunkfriends.FriendsActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/local2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bar"
        android:background="@drawable/bg"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/back_arrow" />

        <LinearLayout
            android:id="@+id/share_info"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_hoobee"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/img_back"
            android:layout_toRightOf="@+id/img_back"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/local321" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/dark_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/btn_mail"
                        android:layout_toStartOf="@+id/btn_mail"
                        android:text="@string/local207" />

                    <ImageView
                        android:id="@+id/btn_mail"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/btn_text"
                        android:layout_toStartOf="@+id/btn_text"
                        android:src="@drawable/ic_message" />

                    <ImageView
                        android:id="@+id/btn_text"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/text_tooltip" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/btn_feedback"
                        android:layout_toStartOf="@+id/btn_feedback"
                        android:text="@string/local303" />

                    <ImageView
                        android:id="@+id/btn_feedback"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/imageView5"
                        android:layout_toStartOf="@+id/imageView5"
                        android:src="@drawable/ic_message" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/btn_app_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:text="@string/local324"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/local323" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/upgrade_info"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_hoobee"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/img_back"
            android:layout_toRightOf="@+id/img_back"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/local369"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/local370" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/dark_gray" />

            <TextView
                android:id="@+id/btn_get_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:text="@string/local368"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/hoobee_info"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_hoobee"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/img_back"
            android:layout_toRightOf="@+id/img_back"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/local332"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/local331" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/dark_gray" />

            <TextView
                android:id="@+id/btn_get_hoobee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/local330"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_hoobee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/local329"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:text="@string/local333"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
